orm-tests/tests/snapshots/query_define_function__function_definition-10.snap
---
source: orm-tests/tests/query_define_function.rs
expression: person.fine_tune_params()
---
get_person(first_name, $_param_00000001, $birthday)
