orm-tests/tests/snapshots/query_define_function__function_definition-11.snap
---
source: orm-tests/tests/query_define_function.rs
expression: person.to_raw().build()
---
get_person('Oyelowo', $last_name, birthday)
