orm-tests/tests/snapshots/query_define_function__function_definition-12.snap
---
source: orm-tests/tests/query_define_function.rs
expression: person.fine_tune_params()
---
get_person($_param_00000001, $last_name, birthday)
