orm-tests/tests/snapshots/query_define_function__function_definition-2.snap
---
source: orm-tests/tests/query_define_function.rs
expression: person.fine_tune_params()
---
fn::get_person($_param_00000001, $_param_00000002, $_param_00000003)
