orm-tests/tests/snapshots/query_define_function__function_definition-7.snap
---
source: orm-tests/tests/query_define_function.rs
expression: person.to_raw().build()
---
get_person('Oyelowo', 'Oyedayo', '1970-01-01T00:01:01Z')
