orm-tests/tests/snapshots/query_define_function__function_definition-9.snap
---
source: orm-tests/tests/query_define_function.rs
expression: person.to_raw().build()
---
get_person(first_name, 'Oyedayo', $birthday)
